--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -10,6 +10,7 @@
 
 {% block dialog %}
     {% include 'expert/layouts/showProject.html' %}
+    {% include 'expert/layouts/project_details.html' %}
 {% endblock %}
 
 {% block content %}
