--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -1,6 +1,25 @@
 {% extends "researcher/layouts/base_layout.html" %}
 
-{% block title %}<title>پژوهشگر</title>{% endblock %}
+{% block title %}<title>پروژه ها</title>{% endblock %}
 
+{% block initial_information %}
+{#    {% include 'researcher/layouts/initial_information.html' %}#}
+{% endblock %}
+{#{% block blur %}blur-div{% endblock %}#}
 
-{% block name %}{{user.username}}{% endblock %}
+{% block dialog %}
+    {% include 'researcher/layouts/showProject.html' %}
+{#    {% include 'researcher/layouts/project_details.html' %}#}
+{% endblock %}
+
+{% block name %}رضا باسره{% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card info-card">
+                {% include 'researcher/layouts/projectList.html' %}
+            </div>
+        </div>
+    </div>
+{% endblock %}
