--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -1,4 +1,5 @@
 {% extends "expert/layouts/base_layout.html" %}
+{% load static %}
 
 {% block title %}پروژه ها{% endblock %}
 
@@ -21,4 +22,7 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block script %}
+
 {% endblock %}
