--- a/expert/templates/expert/layouts/project_details.html
+++ b/expert/templates/expert/layouts/project_details.html
@@ -114,6 +114,30 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="col-lg-9">
+                                            <input class="w-100" type="text" name="researcher-num" value="" id="researcher-num">
+                                            <label for="researcher-num">تعداد پژوهشگر ها</label>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <button class="save-input">ثبت</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="col-lg-9">
+                                            <input class="w-100" type="text" name="researcher-time" value="" id="researcher-time">
+                                            <label for="researcher-time">زمان هفتگی  مورد نیاز هر پژوهشگر</label>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <button class="save-input">ثبت</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,6 +147,16 @@
                     <div class="project-info custom-border-title">
                         <span class="title">اطلاعات پروژه</span>
                         <span class="title-back"></span>
+                        <div class="row">
+                            <div class="col-lg-12 project-detail">
+                                <span class="border-span">محیط کشت سلولی </span>
+                                <span class="border-span">PCR</span>
+                                <span class="border-span">فلوسایتومتری</span>
+                                <span class="border-span">فلوسایتومتری</span>
+                                <span class="border-span">PCR</span>
+                                <span class="border-span">PCR</span>
+                            </div>
+                        </div>
                         <div class="project-info-innerDiv">
                             <div class="project-info-tabs">
                                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
