--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -8,6 +8,7 @@
       <link rel="icon" href="{% static 'expert/img/logo.ico' %}">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
       <link rel="stylesheet" href="{% static 'expert/css/style_xs.css' %}">
   </head>
@@ -101,6 +102,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{% static 'expert/js/persianumber.min.js' %}"></script>
   {% block script %}{% endblock %}
   <script type="text/javascript" src="{% static 'expert/js/script.js' %}"></script>
   </body>
