--- a/expert/templates/expert/layouts/projectList.html
+++ b/expert/templates/expert/layouts/projectList.html
@@ -10,21 +10,21 @@
                 <div class="card project-item">
                     <span class="header">محلول کشت سلولی <span class="sub-header">( 2 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>35,000,000</span> ریال </span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>8 ماه</span> فرصت باقی است!</span>
+                    <span><i class="fas fa-hourglass-end"></i><span>8 ماه</span> تا اتمام پروژه</span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
                     <button type="button" class="chamran-btn-delete">رد</button>
                 </div>
                 <div class="card project-item">
                     <span class="header">تولید واکسن اچ پی وی<span class="sub-header">( 3 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>5,000,000</span> ریال </span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>10 روز</span> فرصت باقی است!</span>
+                    <span><i class="fas fa-hourglass-end"></i><span>10 روز</span>تا اتمام پروژه </span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
                     <button type="button" class="chamran-btn-delete">رد</button>
                 </div>
                 <div class="card project-item">
                     <span class="header">کیت تشخیصی سرطان<span class="sub-header">( 4 ماه قبل )</span></span>
                     <span><i class="fas fa-dollar-sign"></i><span>50,000,000</span> ریال </span>
-                    <span><i class="fas fa-hourglass-end"></i>تا اتمام پروژه <span>2 ساعت</span> فرصت باقی است!</span>
+                    <span><i class="fas fa-hourglass-end"></i><span>2 ساعت</span>تا اتمام پروژه </span>
                     <button type="button" class="chamran-btn-info">مشاهده</button>
                     <button type="button" class="chamran-btn-delete">رد</button>
                 </div>
